<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/tenDp"
        app:cardElevation="@dimen/fiveDp"
        app:cardCornerRadius="@dimen/tenDp">
<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glMid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".4"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".98"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvType"
        android:layout_width="@dimen/zeroDp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tenDp"
        android:text="@string/name"
        android:textSize="@dimen/eighteenSp"
        android:layout_marginLeft="@dimen/tenDp"
        android:fontFamily="@font/circular_air_bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="@dimen/tenDp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tenDp"
        android:text="@string/name"
        android:layout_marginLeft="@dimen/tenDp"
        android:textSize="@dimen/fifteenSp"
        android:fontFamily="@font/circular_air_book"
        app:layout_constraintTop_toBottomOf="@+id/tvType"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="@dimen/tenDp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/threeDp"
        android:text="@string/id"
        android:textSize="@dimen/fifteenSp"
        android:fontFamily="@font/circular_air_book"
        android:layout_marginLeft="@dimen/tenDp"
        app:layout_constraintTop_toBottomOf="@+id/tvName"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="@dimen/tenDp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCuisine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/threeDp"
        android:text="@string/cuisineType"
        android:textSize="@dimen/fifteenSp"
        android:fontFamily="@font/circular_air_book"
        android:layout_marginLeft="@dimen/tenDp"
        app:layout_constraintTop_toBottomOf="@+id/tvId"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="@dimen/tenDp" />

    <View
        android:id="@+id/viewBottomShadow"
        android:layout_width="match_parent"
        android:layout_height="@dimen/threeDp"
        android:layout_marginTop="@dimen/fiveDp"
        android:layout_marginLeft="@dimen/tenDp"
        android:layout_marginRight="@dimen/tenDp"
        app:layout_constraintTop_toBottomOf="@+id/tvCuisine"
        android:background="@drawable/shadow_top_layout"
        android:visibility="gone" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tenDp"
        android:text="@string/menus"
        android:layout_marginStart="@dimen/tenDp"
        android:textSize="@dimen/sixteenSp"
        android:fontFamily="@font/circular_air_bold"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewBottomShadow"
        android:layout_marginLeft="@dimen/fifteenDp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMens"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tenDp"
        android:layout_marginLeft="@dimen/tenDp"
        android:layout_marginRight="@dimen/tenDp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/tvMenu" />

</androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>